--- a/digitals.html
+++ b/digitals.html
@@ -162,75 +162,207 @@
         <div class="routerViewWrapper">
           <div class="sectionWrapper mainContentMenuAdjusted inViewPoint">
             <section
-              id="xkGqXxhfqq2HFSst"
+              id="b4pmbsg9VyLs8Snp"
               data-type="Section"
-              class="Section pbEdit twoColumns imageLeft"
+              class="Section pbEdit"
               style="
                 padding: 7vh 7vw;
-                min-height: 70vh;
+                min-height: 75vh;
                 --section-bg-color: #ffffff;
               "
             >
-              <div
-                data-elements-position="bottom"
-                class="left pbElements pbSortable"
-              >
-                <div
-                  data-type="SingleImage"
-                  id="WXedDlBRxwF4fBom"
-                  class="SingleImage pbEdit fade-in"
-                  style="
-                    object-fit: cover;
-                    object-position: 0px 50%;
-                    margin-bottom: 2em;
-                  "
-                >
-                  <img
-                    class="lazy-img hover-opacity"
-                    height="auto"
-                    width="100%"
-                    alt="Aishwarya B"
-                    data-test=""
-                    style="
-                      object-fit: cover;
-                      object-position: 0px 50%;
-                      margin-bottom: 2em;
-                    "
-                    data-src="https://d37b3blifa5mva.cloudfront.net/000_clients/3934662/page/w1000-img-1345-edf536.jpg"
-                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                    lazy="error"
-                  /><!---->
-                </div>
-              </div>
-              <div
-                data-elements-position="top"
-                class="right pbElements pbSortable"
-              >
+              <div data-elements-position="top" class="pbElements pbSortable">
                 <div
                   data-type="LongText"
-                  id="cJfxbunyffeH4NLD"
+                  id="s46aB1JqH9qxTVvH"
                   class="LongText pbEdit fade-in"
                   style="
                     margin-bottom: 1.1em;
+                    max-width: 1200px;
                     text-align: center;
-                    font-size: 1.46em;
+                    font-size: 1.16em;
                   "
                 >
-                Aishwarya B is a model and an architect with Konkani roots. She was born and raised in Mumbai and is now based in Delhi, India.
-
-                She is a trained Kathak dancer and a culture enthusiast. She uses different mediums of arts to express herself. 
-                
-                This brings out her versatility in modelling as well.
-                She easily transitions between high fashion editorials and commercial campaigns with a portfolio that includes names such as Vogue, Byredo and Amazon.&nbsp;<br />
+                  MEASUREMENTS<br />HEIGHT: 168CM &nbsp;| &nbsp;B: 81CM &nbsp;|
+                  &nbsp;WAIST: 64CM &nbsp;| &nbsp;HIPS: 91CM &nbsp;| &nbsp;SHOE
+                  SIZE: EU38&nbsp;<br />
                 </div>
               </div>
+              <div
+                data-type="Gallery"
+                id="VdhV95uKPOin1ulB"
+                class="Gallery pbEdit twoOne galleryWithResponsiveVideo cover1 hover-opacity"
+                style="margin-top: 3em; margin-bottom: 0em; width: 70%"
+              >
+                <figure
+                  data-type="Item"
+                  id="item-YrnmjuOUNIj0n8Aq"
+                  data-id="YrnmjuOUNIj0n8Aq"
+                  class="Item fade-in"
+                  style="margin-bottom: 2vw; width: 29.0512vw"
+                >
+                  <a
+                    href="?s=b4pmbsg9VyLs8Snp&amp;i=YrnmjuOUNIj0n8Aq"
+                    class="imgWrapper"
+                    target=""
+                    id="imgWrapper-YrnmjuOUNIj0n8Aq"
+                    style="height: 36.314vw; width: 29.0512vw"
+                    ><span class="playIcon ficon-playback-play"></span>
+                    <img
+                      class="lazy-img"
+                      alt=""
+                      id="img-YrnmjuOUNIj0n8Aq"
+                      height="6240"
+                      width="4992"
+                      data-src="images/digitals/rightprofile-aishwaryab.png"
+                      src="images/digitals/rightprofile-aishwaryab.png"
+                      lazy="loaded"
+                    />
+                    <!---->
+                    <!----></a
+                  >
+                  <!---->
+                  <!---->
+                  <!---->
+                </figure>
+                <figure
+                  data-type="Item"
+                  id="item-R8TgvgpIqzwPLyrt"
+                  data-id="R8TgvgpIqzwPLyrt"
+                  class="Item fade-in"
+                  style="margin-bottom: 2vw; width: 29.0488vw"
+                >
+                  <a
+                    href="?s=b4pmbsg9VyLs8Snp&amp;i=R8TgvgpIqzwPLyrt"
+                    class="imgWrapper"
+                    target=""
+                    id="imgWrapper-R8TgvgpIqzwPLyrt"
+                    style="height: 36.314vw; width: 29.0488vw"
+                    ><span class="playIcon ficon-playback-play"></span>
+                    <img
+                      class="lazy-img"
+                      alt=""
+                      id="img-R8TgvgpIqzwPLyrt"
+                      height="6178"
+                      width="4942"
+                      data-src="https://d37b3blifa5mva.cloudfront.net/000_clients/3934662/page/w1000-img-0815-4c9e37.jpg"
+                      src="https://d37b3blifa5mva.cloudfront.net/000_clients/3934662/page/w1000-img-0815-4c9e37.jpg"
+                      lazy="loaded"
+                    />
+                    <!---->
+                    <!----></a
+                  >
+                  <!---->
+                  <!---->
+                  <!---->
+                </figure>
+                <figure
+                  data-type="Item"
+                  id="item-IQHqeyL3GY2W4eVg"
+                  data-id="IQHqeyL3GY2W4eVg"
+                  class="Item fade-in"
+                  style="margin-bottom: 2vw; width: 60.1vw"
+                >
+                  <a
+                    href="?s=b4pmbsg9VyLs8Snp&amp;i=IQHqeyL3GY2W4eVg"
+                    class="imgWrapper"
+                    target=""
+                    id="imgWrapper-IQHqeyL3GY2W4eVg"
+                    style="height: 75.125vw; width: 100%"
+                    ><span class="playIcon ficon-playback-play"></span>
+                    <img
+                      class="lazy-img"
+                      alt=""
+                      id="img-IQHqeyL3GY2W4eVg"
+                      height="3955"
+                      width="3164"
+                      data-src="https://d37b3blifa5mva.cloudfront.net/000_clients/3934662/page/w1000-img-0816-4c9e37.jpg"
+                      src="https://d37b3blifa5mva.cloudfront.net/000_clients/3934662/page/w1000-img-0816-4c9e37.jpg"
+                      lazy="loaded"
+                    />
+                    <!---->
+                    <!----></a
+                  >
+                  <!---->
+                  <!---->
+                  <!---->
+                </figure>
+                <figure
+                  data-type="Item"
+                  id="item-RgXenw3o0nEfVyl9"
+                  data-id="RgXenw3o0nEfVyl9"
+                  class="Item fade-in"
+                  style="margin-bottom: 2vw; width: 29.0506vw"
+                >
+                  <a
+                    href="?s=b4pmbsg9VyLs8Snp&amp;i=RgXenw3o0nEfVyl9"
+                    class="imgWrapper"
+                    target=""
+                    id="imgWrapper-RgXenw3o0nEfVyl9"
+                    style="height: 36.3117vw; width: 29.0506vw"
+                    ><span class="playIcon ficon-playback-play"></span>
+                    <img
+                      class="lazy-img"
+                      alt=""
+                      id="img-RgXenw3o0nEfVyl9"
+                      height="5611"
+                      width="4489"
+                      data-src="https://d37b3blifa5mva.cloudfront.net/000_clients/3934662/page/w1000-img-0812-15a1e1.jpg"
+                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                      lazy="loading"
+                    />
+                    <!---->
+                    <!----></a
+                  >
+                  <!---->
+                  <!---->
+                  <!---->
+                </figure>
+                <figure
+                  data-type="Item"
+                  id="item-RwJf6ewJCQKKM27l"
+                  data-id="RwJf6ewJCQKKM27l"
+                  class="Item fade-in"
+                  style="margin-bottom: 2vw; width: 29.0494vw"
+                >
+                  <a
+                    href="?s=b4pmbsg9VyLs8Snp&amp;i=RwJf6ewJCQKKM27l"
+                    class="imgWrapper"
+                    target=""
+                    id="imgWrapper-RwJf6ewJCQKKM27l"
+                    style="height: 36.3117vw; width: 29.0494vw"
+                    ><span class="playIcon ficon-playback-play"></span>
+                    <img
+                      class="lazy-img"
+                      alt=""
+                      id="img-RwJf6ewJCQKKM27l"
+                      height="2050"
+                      width="1640"
+                      data-src="https://d37b3blifa5mva.cloudfront.net/000_clients/3934662/page/w1000-img-0867-040f45.jpg"
+                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                      lazy="loading"
+                    />
+                    <!---->
+                    <!----></a
+                  >
+                  <!---->
+                  <!---->
+                  <!---->
+                </figure>
+              </div>
+              <!---->
+              <!---->
+              <div
+                data-elements-position="bottom"
+                class="pbElements pbSortable"
+              ></div>
             </section>
           </div>
           <!---->
           <!---->
         </div>
         <div class="routerViewWrapper SiteFooter">
-          <div class="sectionWrapper mainContentMenuAdjusted inViewPoint">
+          <div class="sectionWrapper mainContentMenuAdjusted">
             <section
               id="uDJ1GzMMia0w4VyC"
               data-type="Section"
@@ -260,6 +392,15 @@
         <!---->
         <!---->
         <!---->
+        <a
+          href="https://www.portfoliobox.net"
+          target="_blank"
+          class="portfolioboxLink"
+          >Made with Portfoliobox
+          <img
+            src="https://d2z18g6bj3mwjn.cloudfront.net/pb4/_output/admin/_img/misc/pb-logo.svg"
+            alt="online portfolio website"
+        /></a>
         <!---->
         <!---->
       </div>
@@ -289,7 +430,7 @@
           IsStartPage: null,
           HideMenu: null,
           HideFooter: null,
-          Url: "\/contact.html",
+          Url: "\/contact",
           Title: "CONTACT",
           SeoTitle: null,
           SeoDescription: null,
@@ -368,7 +509,7 @@
           IsStartPage: null,
           HideMenu: null,
           HideFooter: null,
-          Url: "\/contact.html",
+          Url: "\/contact",
           Title: "CONTACT",
           SeoTitle: null,
           SeoDescription: null,
@@ -539,7 +680,7 @@
           IsStartPage: null,
           HideMenu: null,
           HideFooter: null,
-          Url: "about.html",
+          Url: "\/about",
           Title: "ABOUT",
           SeoTitle: null,
           SeoDescription: null,
@@ -620,7 +761,7 @@
           IsStartPage: null,
           HideMenu: null,
           HideFooter: null,
-          Url: "digitals.html",
+          Url: "\/digitals",
           Title: "DIGITALS",
           SeoTitle: null,
           SeoDescription: null,
@@ -830,7 +971,7 @@
           IsStartPage: 1,
           HideMenu: null,
           HideFooter: null,
-          Url: "/polaroids.html",
+          Url: "\/polaroids",
           Title: "BOOK",
           SeoTitle: null,
           SeoDescription: null,
@@ -1933,7 +2074,7 @@
         Id: 3934662,
         IsPublished: 2,
         HidePbLink: null,
-        Url: "aishwaryabmodelprofile-eldrago4s-projects.vercel.app",
+        Url: "sanathampi.portfoliobox.net",
         Title: "Aishwarya B",
         MainMenu: {
           View: "menu1-menu",
@@ -1943,25 +2084,25 @@
             {
               Guid: "YQNr11wmJMqcooUZ",
               Title: "BOOK",
-              Link: "",
+              Link: "\/polaroids",
               PageGuid: "Kp9yy5xouOLrh2SI",
             },
             {
               Guid: "nyG08DvFiRMsKv7s",
               Title: "DIGITALS",
-              Link: "digitals.html",
+              Link: "\/digitals",
               PageGuid: "Vkmx4uhMZmQJwIPT",
             },
             {
               Guid: "NQdDwSDMEDxDMkwd",
               Title: "ABOUT",
-              Link: "about.html",
+              Link: "\/about",
               PageGuid: "D9yAHwE4M3yqcrac",
             },
             {
               Guid: "h8dRdaKJgkdkUzCW",
               Title: "CONTACT",
-              Link: "\/contact.html",
+              Link: "\/contact",
               PageGuid: "Hlc4bXip0k1TYTlE",
             },
           ],
@@ -2263,9 +2404,9 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "ABOUT",
+        "name": "DIGITALS",
         "description": "",
-        "url": "https://aishwaryabmodelprofile-eldrago4s-projects.vercel.app/about.html"
+        "url": "aishwaryabmodelprofile-eldrago4s-projects.vercel.app/digitals"
       }
     </script>
 
