--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>Aishwarya B Model Profile</title>
     <meta name="description" content="Porfolio of Model Aishwarya B" />
     <meta name="author" content="Aishwarya B" />
-
+    <meta property="og:image" content="Link preview image URL">
+    <meta property="og:site_name" content="Aishwarya B - Model Portfolio">
+    <meta property="og:title" content="Aishwarya B - Model Portfolio">
+    <meta property="og:description" content="Aishwarya B is a model and an architect with Konkani roots. She was born and raised in Mumbai and is now based in Delhi, India.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://aishwaryabmodelprofile-eldrago4s-projects.vercel.app/">
+    <meta name="twitter:card" content="/images/thumb.jpeg">
+    <meta name="twitter:image" content="https://aishwaryabmodelprofile-eldrago4s-projects.vercel.app/images/thumb.jpeg">
+    <meta name="twitter:site" content="@aishwaryabmodel">
+    <meta name="twitter:creator" content="@aishwaryabmodel">
+    <meta name="twitter:title" content="Aishwarya B - Model Portfolio">
+    <meta name="twitter:description" content="Aishwarya B is a model and an architect with Konkani roots. She was born and raised in Mumbai and is now based in Delhi, India.">
+    <meta name="twitter:image:alt" content="Aishwarya B Model Profile">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="msapplication-TileColor" content="#990000">
+    <meta name="apple-mobile-web-app-title" content="Aishwarya B Model Profile">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- <link rel="manifest" href="images/icons/manifest.json" /> -->
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,6 +34,14 @@
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="css/main.css" />
+
+    <style type="text/css">.Page{font-family:'Montserrat',sans-serif;font-size:90%;background-color:#ffffff;color:#000000;} .Header{font-size:1.9em;letter-spacing:0.04em;text-transform:uppercase;font-weight:bold;} .Header2{font-size:1.4em;font-weight:bold;letter-spacing:0.03em;} .Header3{font-size:1.2em;font-weight:bold;letter-spacing:0.04em;} .LongText{line-height:1.7em;} .Button{font-size:1.1em;letter-spacing:0.02em;} .CaptionTitle{font-size:1.2em;font-weight:bold;letter-spacing:0.04em;} .CaptionSubTitle{font-size:1em;} .CaptionText{line-height:1.6em;} .CaptionButton{font-size:1.1em;color:black;} .BlogHeader{font-size:1.9em;text-transform:uppercase;letter-spacing:0.04em;font-weight:bold;} .BlogText{line-height:1.8em;} .ProductHeader{font-size:1.9em;text-transform:uppercase;letter-spacing:0.04em;font-weight:bold;} .ProductSubHeader{font-size:1.2em;} .ProductPrice{font-size:1.1em;} .ProductText{line-height:1.8em;} .ProductButton{font-size:1.1em;} .Form{} .CvList{} .CalendarList{} .GeneralList{} .Links{font-weight:lighter;letter-spacing:0.06em;} .SocialMedia{font-weight:lighter;letter-spacing:0.06em;} body { background-color : #ffffff}</style>
+
+    <style type="text/css">.LongText a{color:#089FDA;} .LongText a:hover{text-decoration:underline;} .GeneralList a{color:#089FDA;} .GeneralList a:hover{text-decoration:underline;} .CalendarList a{color:#089FDA;} .CalendarList a:hover{text-decoration:underline;} .CaptionText a{color:#089FDA;} .CaptionText a:hover{text-decoration:underline;} .Link a:hover{color:#089FDA;} .MainMenuLinks a:hover{color:#089FDA;} .MainMenuLinks span.hasLink:hover{color:#089FDA;} .MainMenuLinks a:hover{fill:#089FDA;} .MainMenuLinks .iconLinksWrapper:hover > a, .iconLinksWrapper:hover > path{color:#089FDA;fill:#089FDA;} .SocialMedia a:hover{color:#089FDA;} .Links a:hover{color:#089FDA;} </style>
+
+    <style type="text/css">@media only screen and (max-width: 1000px) {#MAINMENULOGO{margin-left:0em!important;font-size:1.66em!important;align-self:center!important;} #MainMenuId{} #MAINMENULINKS{} #Yw60CAxBAKSjiv1q{max-width:2638px!important;padding-bottom:0vh!important;} }</style>
+
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700">
 
     <!-- Themes:
             Auto:   css/skeleton-auto.css
@@ -45,7 +72,7 @@
       sizes="16x16"
       href="images/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="images/icons/site.webmanifest" />
+    <!-- <link rel="manifest" href="images/icons/site.webmanifest" /> -->
   </head>
   <body>
     <div id="frontApp" class="frontApp">
