- [x] implemented gallery - [x] optimized font sizes for viewports - [x]  Optimized logo font - [x] /hello.html is new landing page!
Co-authored by: eldrago4 <tred38434@gmail.com>

--- a/hello.html
+++ b/hello.html
@@ -496,7 +496,7 @@
                     class="Section pbEdit pbElements pbSortable footer0"
                     style="justify-content: center; align-items: center; padding-bottom: 2vh; padding-top: 2vh;">
                     <div data-type="ShortText" id="PAMjRl59C6xvXumt" class="ShortText pbEdit fade-in"
-                        style="font-size: 1.2em; text-align: center;">© Aishwarya B. All rights reserved.</div>
+                        style="text-align: center;">© Aishwarya B. All rights reserved.</div>
                 </section>
             </div>
         </div>
