--- a/hello.html
+++ b/hello.html
@@ -462,11 +462,11 @@
         
             <script src="/workers/lightbox.js"></script>
         <!-- source-js-1 -->
-            <script type="text/javascript" async="" charset="utf-8"
+            <!-- <script type="text/javascript" async="" charset="utf-8"
                 src="https://www.gstatic.com/recaptcha/releases/Xv-KF0LlBu_a0FJ9I5YSlX5m/recaptcha__en.js"
                 crossorigin="anonymous"
                 integrity="sha384-fSSiXscmlnEMPiEO6UCIYlhDpU414UbO5yxw7QYGkaD/qBSXeuzmDGEqL4uIOnq8"></script>
-            <script src="https://d2z18g6bj3mwjn.cloudfront.net/pb4/_output/pb4.out.front1.ver.1719319466034.js"></script>
+            <script src="https://d2z18g6bj3mwjn.cloudfront.net/pb4/_output/pb4.out.front1.ver.1719319466034.js"></script> -->
             <!-- /source-js-1 -->
 
 
