- [x] optimized css - [x] about me text is better for mobile now
Co-authored-by: @eldrago4 <tred38434@gmail.com>

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/main.css" />
+    <!-- <link rel="stylesheet" href="css/main.css" /> -->
 
     <style type="text/css">
         .Page {
@@ -243,7 +243,7 @@
     <link rel="stylesheet" href="css/skeleton-auto.css" />
 
     <!-- Brand Styles -->
-    <link rel="stylesheet" href="css/brands.css" />
+    <link rel="stylesheet" href="css/about.css" />
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -521,7 +521,7 @@
                         </div>
                         <div data-elements-position="top" class="right pbElements pbSortable">
                             <div data-type="LongText" id="cJfxbunyffeH4NLD" class="LongText pbEdit fade-in"
-                                style="margin-bottom: 1.1em; text-align: center; font-size: 1.46em;">Aishwarya B is a
+                                style="margin-bottom: 1.1em; text-align: center;">Aishwarya B is a
                                 model and an architect with Konkani roots. She was born and raised in Mumbai and is now
                                 based in Delhi, India.
 
