--- a/hello.html
+++ b/hello.html
@@ -37,7 +37,7 @@
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <link rel="stylesheet" href="css/mobile-menu.css" />
+
     <style type="text/css">
         .Page {
             font-family: 'Montserrat', sans-serif;
@@ -303,8 +303,8 @@
     <link rel="stylesheet" href="css/skeleton-auto.css" />
 
     <!-- Brand Styles -->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="/css/hello.css">
+    <link rel="stylesheet" href="css/main.css"> 
+
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -387,7 +387,7 @@
             </div>
  
             <section class="dynamicGridWrapper">
-                <div id="AGtj3LS93HjyMn10" class="Gallery pbEdit dynamicGrid cover1 hover-opacity">
+                <div id="AGtj3LS93HjyMn10" class="Gallery pbEdit dynamicGrid cover1 hover-opacity" style="padding:2vw 2vh">
                 </div>
             </section>
 
