hamburgerrrr Co-authored-by: @eldrago4 <tred38434@gmail.com>

--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/hello.css" />
+  <link rel="stylesheet" href="css/1main.css" />
+  <link rel="stylesheet" href="css/mobile-menu.css" />
 
   <style type="text/css">
     .Page {
@@ -400,7 +400,7 @@
       history.scrollRestoration = "manual";
     }
   </script>
-
+  <script src="workers/hamburger.js"></script>
 </body>
 
 </html>
