--- a/hello.html
+++ b/hello.html
@@ -304,6 +304,7 @@
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/main.css"> 
+    <link rel="stylesheet" href="css/mobile-menu.css"> 
 
 
     <!-- Favicon
