--- a/polaroids.html
+++ b/polaroids.html
@@ -303,7 +303,8 @@
     <link rel="stylesheet" href="css/skeleton-auto.css" />
 
     <!-- Brand Styles -->
-    <link rel="stylesheet" href="/css/hello.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/mobile-menu.css">
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -502,6 +503,7 @@
         </div>
         </div>
     </div>
+    <script src="workers/hamburger.js"></script>
 </body>
 
 </html>
