--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <meta property="og:description"
         content="Aishwarya B is a model and an architect with Konkani roots. She was born and raised in Mumbai and is now based in Delhi, India.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://aishwaryabmodelprofile-eldrago4s-projects.vercel.app/">
+    <meta property="og:url" content="https://aishwaryabmodelprofile-eldrago4s-projects.vercel.app/home.html">
     <meta name="twitter:card" content="/images/thumb.jpeg">
     <meta name="twitter:image" content="https://aishwaryabmodelprofile-eldrago4s-projects.vercel.app/images/thumb.jpeg">
     <meta name="twitter:site" content="@aishwaryabmodel">
@@ -36,7 +36,7 @@
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <!-- <link rel="stylesheet" href="css/main.css" /> -->
+
 
     <style type="text/css">
         .Page {
@@ -233,6 +233,66 @@
         }
     </style>
 
+    <style>
+        /* Basic Grid Layout */
+        .dynamicGrid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            /* Responsive columns, adjust as needed */
+            grid-gap: 15px;
+            /* Adjust gap based on your image */
+            margin-top: 3em;
+            /* From provided CSS */
+            height: 255.84vw;
+        }
+
+        /* Image Styling */
+        .dynamicGrid img {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+            /* Cover the container while maintaining aspect ratio */
+        }
+
+        /* Lazy Loading (with your provided classes) */
+        .lazy-img {
+            opacity: 0;
+            transition: opacity 0.5s ease-out;
+        }
+
+        .lazy-img[loading="eager"] {
+            opacity: 1;
+        }
+
+        /* Fade-in Animation (using your provided classes) */
+        .inViewPoint .fade-in [lazy=loaded] {
+            animation-name: fade-in;
+            animation-duration: 1.2s;
+            animation-delay: .3s;
+            animation-timing-function: cubic-bezier(.215, .61, .355, 1);
+            animation-fill-mode: backwards;
+        }
+
+        /* Hover Effect (using your provided class) */
+        .hover-opacity figure img {
+            transition: opacity 0.5s ease-out;
+        }
+
+        .hover-opacity figure:hover img {
+            opacity: 0.8;
+        }
+
+
+        /* Tablet and Mobile Responsiveness */
+        @media (max-width: 999px) {
+
+            /* Adjust breakpoint based on your design */
+            .dynamicGrid {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
+
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700">
 
     <!-- Themes:
@@ -243,7 +303,9 @@
     <link rel="stylesheet" href="css/skeleton-auto.css" />
 
     <!-- Brand Styles -->
-    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/about.css"> 
+    <link rel="stylesheet" href="css/mobile-menu.css"> 
+
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -253,218 +315,35 @@
     <!-- <link rel="manifest" href="images/icons/site.webmanifest" /> -->
 </head>
 
-
-<style type="text/css">
-    .Page {
-        font-family: 'Montserrat', sans-serif;
-        font-size: 90%;
-        background-color: #ffffff;
-        color: #000000;
-    }
-
-    .Header {
-        font-size: 1.9em;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-        font-weight: bold;
-    }
-
-    .Header2 {
-        font-size: 1.4em;
-        font-weight: bold;
-        letter-spacing: 0.03em;
-    }
-
-    .Header3 {
-        font-size: 1.2em;
-        font-weight: bold;
-        letter-spacing: 0.04em;
-    }
-
-    .LongText {
-        line-height: 1.7em;
-    }
-
-    .Button {
-        font-size: 1.1em;
-        letter-spacing: 0.02em;
-    }
-
-    .CaptionTitle {
-        font-size: 1.2em;
-        font-weight: bold;
-        letter-spacing: 0.04em;
-    }
-
-    .CaptionSubTitle {
-        font-size: 1em;
-    }
-
-    .CaptionText {
-        line-height: 1.6em;
-    }
-
-    .CaptionButton {
-        font-size: 1.1em;
-        color: black;
-    }
-
-    .BlogHeader {
-        font-size: 1.9em;
-        text-transform: uppercase;
-        letter-spacing: 0.04em;
-        font-weight: bold;
-    }
-
-    .BlogText {
-        line-height: 1.8em;
-    }
-
-    .ProductHeader {
-        font-size: 1.9em;
-        text-transform: uppercase;
-        letter-spacing: 0.04em;
-        font-weight: bold;
-    }
-
-    .ProductSubHeader {
-        font-size: 1.2em;
-    }
-
-    .ProductPrice {
-        font-size: 1.1em;
-    }
-
-    .ProductText {
-        line-height: 1.8em;
-    }
-
-    .ProductButton {
-        font-size: 1.1em;
-    }
-
-    .Links {
-        font-weight: lighter;
-        letter-spacing: 0.06em;
-    }
-
-    .SocialMedia {
-        font-weight: lighter;
-        letter-spacing: 0.06em;
-    }
-
-    body {
-        background-color: #ffffff
-    }
-</style>
-<style type="text/css"></style>
-<style type="text/css">
-    .LongText a {
-        color: #089FDA;
-    }
-
-    .LongText a:hover {
-        text-decoration: underline;
-    }
-
-    .GeneralList a {
-        color: #089FDA;
-    }
-
-    .GeneralList a:hover {
-        text-decoration: underline;
-    }
-
-    .CalendarList a {
-        color: #089FDA;
-    }
-
-    .CalendarList a:hover {
-        text-decoration: underline;
-    }
-
-    .CaptionText a {
-        color: #089FDA;
-    }
-
-    .CaptionText a:hover {
-        text-decoration: underline;
-    }
-
-    .Link a:hover {
-        color: #089FDA;
-    }
-
-    .MainMenuLinks a:hover {
-        color: #089FDA;
-    }
-
-    .MainMenuLinks span.hasLink:hover {
-        color: #089FDA;
-    }
-
-    .MainMenuLinks a:hover {
-        fill: #089FDA;
-    }
-
-    .MainMenuLinks .iconLinksWrapper:hover>a,
-    .iconLinksWrapper:hover>path {
-        color: #089FDA;
-        fill: #089FDA;
-    }
-
-    .SocialMedia a:hover {
-        color: #089FDA;
-    }
-
-    .Links a:hover {
-        color: #089FDA;
-    }
-</style>
-<style type="text/css"></style>
-<style type="text/css"></style>
-<style type="text/css">
-    @media only screen and (max-width: 1000px) {
-        #MAINMENULOGO {
-            margin-left: 0em !important;
-            font-size: 1.66em !important;
-            align-self: center !important;
-        }
-
-        #Yw60CAxBAKSjiv1q {
-            max-width: 2638px !important;
-            padding-bottom: 0vh !important;
-        }
-    }
-</style>
-<style type="text/css">
-    null
-</style>
-<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700">
-<meta name="theme-color" content="#ffffff">
-<meta name="msapplication-TileColor" content="#ffffff">
-</head>
-
 <body>
-
-    <div id="frontApp" class="frontApp"><!----> <!----> <!----> <!----> <!----> <!----> <!----> <!---->
+    <div id="frontApp" class="frontApp">
+        <!---->
+        <!---->
+        <!---->
+        <!---->
+        <!---->
+        <!---->
+        <!---->
+        <!---->
         <div class="Page">
             <div class="navWrapper positionDefault" style="--drop-down-color: #ffffff">
                 <!---->
+
                 <nav data-type="MainMenu" id="MainMenuId" data-bgimg="" class="MainMenu pbEdit inViewPoint borderTop1">
                     <div data-elements-position="top" class="pbMenu pbSortable pbElements first">
                         <h1 data-type="Logo" id="MAINMENULOGO" class="Logo pbEdit fade-in" style="
-                  text-transform: uppercase;
-                  letter-spacing: 0.27em;
-                  text-align: left;
-                  font-size: 3.86em;
-                  font-weight: bold;
-                  align-self: flex-start;
-                  max-height: 74px;
-                  margin-top: 0.75em;
-                  margin-bottom: 0.85em;
-                ">
-                            <a href="/" class="router-link-active" target="">
+                      text-transform: uppercase;
+                      letter-spacing: 0.27em;
+                      text-align: left;
+                      font-size: 3.86em;
+                      font-weight: bold;
+                      align-self: flex-start;
+                      max-height: 74px;
+                      margin-top: 0.75em;
+                      margin-bottom: 0.85em;
+                      white-space: nowrap;
+                    ">
+                            <a href="/hello.html" class="router-link-active" target="">
                                 Aishwarya B</a>
                             <!---->
                             <!---->
@@ -472,14 +351,14 @@
                     </div>
                     <div data-elements-position="bottom" class="pbMenu pbSortable pbElements second">
                         <div data-type="MainMenuLinks" id="MAINMENULINKS" class="MainMenuLinks fade-in" style="
-                  margin-top: 1em;
-                  font-size: 1.56em;
-                  letter-spacing: 0.04em;
-                  font-weight: lighter;
-                  text-transform: none;
-                  text-align: right;
-                  align-self: flex-end;
-                ">
+                            margin-top: 1em;
+                            font-size: 1.56em;
+                            letter-spacing: 0.04em;
+                            font-weight: lighter;
+                            text-transform: none;
+                            text-align: right;
+                            align-self: flex-end;
+                        ">
                             <div class="linkWrapper">
                                 <!----><a href="/polaroids.html" class="" target="" id="YQNr11wmJMqcooUZ"><span
                                         class="linkSpan">BOOK</span></a><!---->
@@ -498,13 +377,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="hamburger">
+                    <div class="hamburger" onclick="toggleMenu()">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
                         <div class="bar3"></div>
+
                     </div>
                 </nav>
+
             </div>
+ 
             <div class="routerViewWrapper">
                 <div class="sectionWrapper mainContentMenuAdjusted inViewPoint">
                     <section id="xkGqXxhfqq2HFSst" data-type="Section" class="Section pbEdit twoColumns imageLeft"
@@ -547,7 +429,7 @@
             </div>
         </div>
     </div>
-
+    <script src="/workers/hamburger.js"></script>
     <!-- source-js-1 -->
     <script type="text/javascript" async="" charset="utf-8"
         src="https://www.gstatic.com/recaptcha/releases/Xv-KF0LlBu_a0FJ9I5YSlX5m/recaptcha__en.js"
