--- a/digitals.html
+++ b/digitals.html
@@ -37,7 +37,7 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/hello.css" />
+  <link rel="stylesheet" href="css/mobile-menu.css" />
 
   <style type="text/css">
     .Page {
@@ -559,6 +559,7 @@
       </div>
     </div>
   </div>
+  <script src="workers/hamburger.js"></script>
 </body>
 
 </html>
