- [x] improved fonts for diff viewports on abt and contact - [x] x for hamburger - [x] clean links

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
-    <title>Aishwarya B Model Profile</title>
+    <title>About - Aishwarya B</title>
     <meta name="description" content="Porfolio of Model Aishwarya B" />
     <meta name="author" content="Aishwarya B" />
     <meta property="og:image" content="Link preview image URL">
@@ -300,12 +300,12 @@
             Light:  css/skeleton-light.css
             Dark:   css/skeleton-dark.css
      -->
-    <link rel="stylesheet" href="css/skeleton-auto.css" />
+    <!-- <link rel="stylesheet" href="css/skeleton-auto.css" /> -->
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/about.css"> 
     <link rel="stylesheet" href="css/mobile-menu.css"> 
-
+    
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -394,7 +394,7 @@
                         <div data-elements-position="bottom" class="left pbElements pbSortable">
                             <div data-type="SingleImage" id="WXedDlBRxwF4fBom" class="SingleImage pbEdit fade-in"
                                 style="object-fit: cover; object-position: 0px 50%; margin-bottom: 2em;"><img
-                                    class="lazy-img hover-opacity" height="auto" width="100%" alt="Aishwarya B"
+                                    class="lazy-img" height="auto" width="100%" alt="Aishwarya B"
                                     data-test=""
                                     style="object-fit: cover; object-position: 0px 50%; margin-bottom: 2em;"
                                     data-src="https://d37b3blifa5mva.cloudfront.net/000_clients/3934662/page/w1000-img-1345-edf536.jpg"
