--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/main.css"> 
+
   <link rel="stylesheet" href="css/1main.css" />
   <link rel="stylesheet" href="css/mobile-menu.css" />
 
@@ -229,7 +231,7 @@
             Light:  css/skeleton-light.css
             Dark:   css/skeleton-dark.css
      -->
-  <link rel="stylesheet" href="css/skeleton-auto.css" />
+  <!-- <link rel="stylesheet" href="css/skeleton-auto.css" /> -->
 
 
   <!-- Favicon
