--- a/hello.html
+++ b/hello.html
@@ -5,18 +5,18 @@
     <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
-    <title>Aishwarya B Model Profile</title>
+    <title>Aishwarya B - Model Profile</title>
     <meta name="description" content="Porfolio of Model Aishwarya B" />
     <meta name="author" content="Aishwarya B" />
-    <meta property="og:image" content="Link preview image URL">
+    <meta property="og:image" content="https://i.ibb.co/F5rPHhm/Aishwarya-B.jpg">
     <meta property="og:site_name" content="Aishwarya B - Model Portfolio">
     <meta property="og:title" content="Aishwarya B - Model Portfolio">
     <meta property="og:description"
         content="Aishwarya B is a model and an architect with Konkani roots. She was born and raised in Mumbai and is now based in Delhi, India.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://aishwaryabmodelprofile-eldrago4s-projects.vercel.app/home.html">
+    <meta property="og:url" content="https://aishwaryabmodelprofile.vercel.app/hello.html">
     <meta name="twitter:card" content="/images/thumb.jpeg">
-    <meta name="twitter:image" content="https://aishwaryabmodelprofile-eldrago4s-projects.vercel.app/images/thumb.jpeg">
+    <meta name="twitter:image" content="https://aishwaryab-model-profile-eldrago4s-projects.vercel.app/images/thumb.jpeg">
     <meta name="twitter:site" content="@aishwaryabmodel">
     <meta name="twitter:creator" content="@aishwaryabmodel">
     <meta name="twitter:title" content="Aishwarya B - Model Portfolio">
@@ -27,7 +27,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="msapplication-TileColor" content="#990000">
-    <meta name="apple-mobile-web-app-title" content="Aishwarya B Model Profile">
+    <meta name="apple-mobile-web-app-title" content="Aishwarya B - Model Profile">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- <link rel="manifest" href="images/icons/manifest.json" /> -->
     <!-- Mobile Specific Metas
@@ -222,10 +222,6 @@
                 align-self: center !important;
             }
 
-            #MainMenuId {}
-
-            #MAINMENULINKS {}
-
             #Yw60CAxBAKSjiv1q {
                 max-width: 2638px !important;
                 padding-bottom: 0vh !important;
@@ -300,7 +296,7 @@
             Light:  css/skeleton-light.css
             Dark:   css/skeleton-dark.css
      -->
-    <link rel="stylesheet" href="css/skeleton-auto.css" />
+    <!-- <link rel="stylesheet" href="css/skeleton-auto.css" /> -->
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/main.css"> 
