--- a/digitals.html
+++ b/digitals.html
@@ -230,10 +230,8 @@
             Light:  css/skeleton-light.css
             Dark:   css/skeleton-dark.css
      -->
-  <link rel="stylesheet" href="css/skeleton-auto.css" />
+  <!-- <link rel="stylesheet" href="css/skeleton-auto.css" /> -->
 
-  <!-- Brand Styles -->
-  <link rel="stylesheet" href="css/brands.css" />
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
